--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {
  inset: 0;
  z-index: 5; /* Below text content but above background */
  overflow: hidden;
- opacity: 0.15; /* Increased opacity for better visibility */
+ opacity: 0.175; /* Increased opacity for better visibility */
  display: flex;
  align-items: center;
  justify-content: center;
@@ -391,8 +391,7 @@ const pages = [
     ,"mediaUrl": "sitting_moon.png" 
   },
   {
-    "message": "You may not believe it, but to me, you’re an amazing person with a good heart. I’m sure many people have told you that in their own ways — because it’s true. But for me, you’re someone special — a person whose company I genuinely enjoy and whose vibe feels trusted and comforting. You know, sometimes I think about that quiet moment with friends maybe you’ve felt it too, when frustration or a bit of sadness makes your heart heavy.You sit there silently, surrounded by people, but not really wanting to talk, and a few tears slip down as your little black eyes shine with tiny drops of water. In that moment, you look so soft, so real and too cute. Let those tears fall, close your eyes, take a deep breath, and go to your best friends; talk about any random, silly thing — it really helps."
-  },
+    "message": "You may not believe it, but to me, you’re an amazing person with a good heart. I’m sure many people have told you that in their own ways — because it’s true. But for me, you’re a bit special — someone whose company I truly enjoy, who has an amazing vibe, and whom I genuinely care. You know, sometimes I think about those quiet moments with friends — maybe you’ve felt them too — when frustration or a bit of sadness makes your heart feel heavy. You sit there silently, surrounded by people, but not really wanting to talk, and a few tears slip down as your little black eyes shine with tiny drops of water. In that moment, you look so soft, so real, and honestly, too cute. Let those tears fall, close your eyes, take a deep breath, and go to your best friends; talk about any random, silly thing — it really helps." },
   {
     "message": "I once read that “Even the purest heart has the allure of darkness.” And I think that’s true — we all carry both light and shadow within us. But when I look at you, I mostly see light. Even the parts you call ‘dark’ just make you more human, more real — and honestly, even more beautiful.\nI’m not a good writer, but I wrote this for you —\n“Your smile brings peace to every heart,\nEven your silence feels like an art.\nYour heart is pure, your kindness true,\nAnd it shows in everything you do.\nIf you were a star, you’d outshine the moon,\nYou’re simply good, like a child — that’s the truth about you.”"
   },
@@ -400,9 +399,10 @@ const pages = [
   {
   "message": "I just wanna say one last thing from my side, and please remember this always — I know I can’t solve everything or make every problem disappear; no one really can — some battles you’re meant to face on your own. But I’ll always try to be there — to listen, to talk, and to make sure you never feel alone. You can share anything with me, trust me, anything — whether it’s something random or something that truly matters. And if you don’t like my company, that’s absolutely fine — just be with whoever’s company you enjoy, because all I really want is to see you happy, with lots of smiles. Never feel like you don’t have anyone by your side — you’re never truly alone. I just wanna be someone you can rely on — not perfect, but always real."
 },
-  {
-    "message": "AT THE END\n\nMany, many Happiest Birthdays Again! \nAlways keep that cute smile just like you always do, and stay happy — the only thing that truly matters ✨"
-  }
+{
+  "message": "Many, many happiest birthdays again! ✨ \nAlways keep that cute smile just like you always do, and stay happy — that’s the only thing that truly matters.\nI wish that every single day brings you countless reasons to smile — moments filled with peace, warmth, and gentle joy. May life continue to gift you endless happiness, and enough strength to face whatever comes your way. Take care of yourself always, and never stop being the beautiful soul that you are. \n----------------------------- END -----------------------------"
+}
+
 
 
 ];
