--- a/index.html
+++ b/index.html
@@ -602,13 +602,11 @@ personImg: "front_photo.png"
     "message": "I once read that “Even the purest heart has the allure of darkness.” And I think that’s true — we all carry both light and shadow within us. But when I look at you, I mostly see light. Even the parts you call ‘dark’ just make you more human, more real — and honestly, even more beautiful.\nI’m not a good writer, but I wrote this for you —\n“Your smile brings peace to every heart,\nEven your silence feels like an art.\nYour heart is pure, your kindness true,\nAnd it shows in everything you do.\nIf you were a star, you’d outshine the moon,\nYou’re simply good, like a child — that’s the truth about you.”"
   },
 
-  {
-  "message": "I just wanna say one last thing from my side, and please remember this always — I know I can’t solve everything or make every problem disappear; no one really can — some battles you’re meant to face on your own. But I’ll always try to be there — to listen, to talk, and to make sure you never feel alone. You can share anything with me, trust me, anything — whether it’s something random or something that truly matters. And if you don’t like my company, that’s absolutely fine — just be with whoever’s company you enjoy, because all I really want is to see you happy, with lots of smiles. Never feel like you don’t have anyone by your side — you’re never truly alone. I just wanna be someone you can rely on — not perfect, but always real."
-},
+  
 /* --- NEW INTERACTIVE STARRY NIGHT PAGE --- */
 {
-"message": "Click on stars to read messages", // This text is now handled by the .star-prompt CSS and HTML element
-"mediaUrl": "girls.png", // Use your specific image for the background
+"message": "Click on stars", // This text is now handled by the .star-prompt CSS and HTML element
+"mediaUrl": "girls1.png", // Use your specific image for the background
 "pageType": "starryNight", 
 "stars": [
 {
@@ -620,7 +618,7 @@ personImg: "front_photo.png"
 {
  "id": "star2",
  "position": "top: 10%; right: 20%;",
- "message": "Mysterious<br>Understanding you is honestly so difficult — but maybe that’s just because you’re a girl.<br><br>Some mysteries aren’t meant to be solved anyway 😉"
+ "message": "Mysterious<br>Understanding you is honestly so difficult — but maybe that’s just because you’re a girl.<br><br>Some mysteries aren’t meant to be solved anyway"
 },
 {
  "id": "star3",
@@ -629,7 +627,9 @@ personImg: "front_photo.png"
 }
 ]
 },
-
+{
+  "message": "I just wanna say one last thing from my side, and please remember this always — I know I can’t solve everything or make every problem disappear; no one really can — some battles you’re meant to face on your own. But I’ll always try to be there — to listen, to talk, and to make sure you never feel alone. You can share anything with me, trust me, anything — whether it’s something random or something that truly matters. And if you don’t like my company, that’s absolutely fine — just be with whoever’s company you enjoy, because all I really want is to see you happy, with lots of smiles. Never feel like you don’t have anyone by your side — you’re never truly alone. I just wanna be someone you can rely on — not perfect, but always real."
+},
 {
   "message": "Many, many happiest birthdays again! ✨ \nAlways keep that cute smile just like you always do, and stay happy — that’s the only thing that truly matters.\nI wish that every single day brings you countless reasons to smile — moments filled with peace, warmth, and gentle joy. May life continue to gift you endless happiness, and enough strength to face whatever comes your way. Take care of yourself always, and never stop being the beautiful soul that you are. \n---- END ----"
 }
